# wabdb-sync

./: .dockerignore  .gitignore  CONFIG.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docerfile  docker-compose.yml  main.py  pyproject.toml  requirments.txt  wandb-gcp-sync.py  wandb-notion-sync.py
.github/: ISSUE_TEMPLATE
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE
.github/workflows/: ci.yml
scripts/: dataset.py  logger.py
tests/: test_sync.py
wandb/: settings
