[tool.poetry]
name = "wandb-notion-sync"
version = "0.1.0"
description = "Sync WandB runs to Notion"
authors = ["Namgyu-Youn <yynk2012@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wandb = "^0.15.0"
notion-client = "^2.0.0"
oauth2client = "^4.1.3"
schedule = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
